# trefle_engine

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
include/: antecedent.h  default_fuzzy_rule.h  fis_viewer.h  fuzzy_labels_generator.h  fuzzy_rule.h  fuzzy_rule_element.h  json_fis_reader.h  json_fis_writer.h  linear_interpolation.h  linguisticvariable.h  membershipfunction_i.h  singleton_fis.h  tff_fis_writer.h  trilv.h  trimf.h
src/: fuzzy_rule.cpp  fuzzy_rule_element.cpp  json_fis_reader.cpp  linguisticvariable.cpp  main.cpp  membershipfunction_i.cpp  singleton_fis.cpp  trilv.cpp  trimf.cpp
tests/: fis_lininterp_test.cpp  fuzzy_labels_generator_test.cpp
